@@ -381,6 +381,20 @@ namespace libtorrent {
 			init();
 		}
 
+		if (m_settings.get_int(settings_pack::peer_dscp) != 0)
+		{
+			int const value = m_settings.get_int(settings_pack::peer_dscp);
+			error_code ec;
+			aux::set_traffic_class(m_socket, value, ec);
+#ifndef TORRENT_DISABLE_LOGGING
+			if (ec && should_log(peer_log_alert::outgoing))
+			{
+				peer_log(peer_log_alert::outgoing, "SET_DSCP", "value: %d e: %s"
+					, value, ec.message().c_str());
+			}
+#endif
+		}
+
 		// if this is an incoming connection, we're done here
 		if (!m_connecting)
 		{
@@ -6384,19 +6398,6 @@ namespace libtorrent {
 		{
 			disconnect(errors::self_connection, operation_t::bittorrent, failure);
 			return;
-		}
-
-		if (m_settings.get_int(settings_pack::peer_dscp) != 0)
-		{
-			int const value = m_settings.get_int(settings_pack::peer_dscp);
-			aux::set_traffic_class(m_socket, value, ec);
-#ifndef TORRENT_DISABLE_LOGGING
-			if (ec && should_log(peer_log_alert::outgoing))
-			{
-				peer_log(peer_log_alert::outgoing, "SET_DSCP", "value: %d e: %s"
-					, value, ec.message().c_str());
-			}
-#endif
 		}
 
 #ifndef TORRENT_DISABLE_EXTENSIONS
